--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.9.1",
     "jquery": "^3.6.0",
-    "sass-loader": "^11.0.1",
+    "node-sass": "^5.0.0",
+    "sass-loader": "10.1.1",
     "swiper": "^6.5.0",
     "vue": "^3.0.7",
     "vue-awesome-swiper": "^4.1.1",
