--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "swiper": "^6.5.0",
     "vue": "^3.0.7",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-owl-carousel": "^2.0.3",
     "vue-router": "^4.0.0-0",
     "vue-slick": "^1.1.16",
     "vue-slick-carousel": "^1.0.2"
